2003-10-13  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py (OUTGOINGMAIL): Change default to 'sendmail'.
	(MAIL_TRANSPORT): OUTGOINGMAIL renamed.

2003-10-09  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (sendmail): If using /usr/sbin/sendmail, pass a tuple of
	arguments into pipecmd() instead of a string to avoid the shell
	completely.  Also, add '-i' to the list of args.
	
	* Version.py (PLATFORM): Use the more descriptive 'platform'
	module if it's available.

2003-10-01  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (getfullname): Change default fallback value to an empty
	string instead of 'Jane Doe'.

2003-09-22  Jason R. Mastaler  <jason@mastaler.com>

	* Util.py (append_to_file): Strip inline comments before checking
	for duplicate entries.

2003-08-21  Tim Legant  <tim@catseye.net>

	* Pending.py (initQueue): After reading message list from stdin,
	close stdin and re-open on the tty, so interactive operation is
	possible.  Also, minor change to allow multiple message names on
	the same line while reading stdin.

2003-08-19  Jason R. Mastaler  <jason@mastaler.com>

	* FilterParser.py (_FilterFile.__init__): confirm can now take an
	option, which is the path to a specific template.

2003-08-01  Tim Legant  <tim@catseye.net>

	* Util.py (msg_from_file): When parsing a message with the
	HeaderParser, add a "custom" attribute to the Message object
	called 'header_parsed'.  If it exists and is True (1), then the
	Message was read and parsed by HeaderParser.

	(msg_as_string): AutoResponse.py and Pending.py use fully parsed
	MIME messages, so HeaderParsedGenerator won't work for those
	messages.  Made msg_as_string sensitive to 'header_parsed'
	attribute of Message, defined in Util.msg_from_file.

2003-07-31  Tim Legant  <tim@catseye.net>

	* Util.py (msg_as_string): Use HeaderParsedGenerator rather than
	the standard Generator, which fails on messages parsed with
	HeaderParser.

2003-07-18  Tim Legant  <tim@catseye.net>
